feat(1442): rename objects and methods